// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimRecord form should allow content indicators to be selected 1`] = `
"Snapshot Diff:
- First value
+ Second value

  <DocumentFragment>
    <div
      class=\\"MuiGrid-container-3 StandardPage\\"
    >
+     <h2
+       class=\\"MuiTypography-root-100 MuiTypography-h4-115 MuiTypography-colorPrimary-130 Page-layoutTitle-2\\"
+     >
+       Claim a work
+     </h2>
      <div
        class=\\"MuiGrid-item-4 Page-layoutCard-1\\"
+     >
+       <form>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-358\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-361\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-362\\"
+                   >
+                     You are claiming to be an author for the following work:
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-364\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-container-3\\"
+                     >
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                         style=\\"min-width: 1px;\\"
+                       >
+                         <h6
+                           class=\\"MuiTypography-root-100 MuiTypography-h6-117 PublicationCitation-citationTitle-366\\"
+                         >
+                           <a
+                             href=\\"/view/UQ:396321\\"
+                           >
+                             Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer
+                           </a>
+                         </h6>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationText-367\\"
+                       >
+                         <div
+                           class=\\"citationContent citationJournalArticle\\"
+                         >
+                           <span
+                             class=\\"citationAuthors\\"
+                           >
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Milevskiy, Michael J. G., 
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                               Al-Ejeh, Fares
+                             </span>
+                             <span
+                               class=\\"citationAuthor\\"
+                             >
+                                and Saunus, Jodi M.
+                             </span>
+                              
+                           </span>
+                           <span
+                             class=\\"citationDate\\"
+                           >
+                             (2016).
+                           </span>
+                           <span
+                             class=\\"citationTitle\\"
+                           >
+                              Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer.
+                           </span>
+                           <span
+                             class=\\"citationJournalName\\"
+                           >
+                              Human Molecular Genetics 
+                           </span>
+                           <span
+                             class=\\"citationVolumeNumber\\"
+                           >
+                              25 
+                           </span>
+                           <span
+                             class=\\"citationIssueNumber\\"
+                           >
+                             (15) 
+                           </span>
+                           <span
+                             class=\\"citationPageRange\\"
+                           >
+                             <span
+                               class=\\"citationStartPage\\"
                              >
+                               3269
+                             </span>
+                             -
+                             <span
+                               class=\\"citationEndPage\\"
+                             >
+                               3283
+                             </span>
+                           </span>
+                           <span>
+                             . 
+                           </span>
+                           <a
+                             aria-label=\\"Open this DOI in an new window\\"
+                             class=\\"citationDoiLink ExternalLink-externalLink-372\\"
+                             href=\\"https://doi.org/10.1093/hmg/ddw177\\"
+                             rel=\\"noopener noreferrer\\"
+                             tabindex=\\"0\\"
+                             target=\\"_blank\\"
+                             theme=\\"[object Object]\\"
+                             title=\\"Open this DOI in an new window\\"
+                           >
+                             <svg
+                               aria-hidden=\\"true\\"
+                               class=\\"MuiSvgIcon-root-374 ExternalLink-externalLinkIcon-373\\"
+                               focusable=\\"false\\"
+                               role=\\"presentation\\"
+                               viewBox=\\"0 0 24 24\\"
+                             >
+                               <path
+                                 d=\\"M0 0h24v24H0z\\"
+                                 fill=\\"none\\"
+                               />
+                               <path
+                                 d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                               />
+                             </svg>
+                             https://doi.org/10.1093/hmg/ddw177
+                           </a>
+                         </div>
+                       </div>
+                       <div
+                         class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 PublicationCitation-citationCounts-368\\"
+                       >
                          <div
                            class=\\"MuiGrid-container-3\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-auto-44\\"
+                           >
+                             <a
+                               aria-label=\\"Full citation in Web of science will open in a new window\\"
+                               class=\\"wosCitationCount CitationCountView-citationCount-384 ExternalLink-externalLink-372\\"
+                               href=\\"http://ezproxy.library.uq.edu.au/login?url=http://gateway.isiknowledge.com/gateway/Gateway.cgi?GWVersion=2&SrcApp=resolve1&DestLinkType=FullRecord&DestApp=WOS_CPL&KeyUT=000393077300011&SrcAuth=uqueensland\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Web of science will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon wos large\\"
+                               />
+                               <span
+                                 class=\\"CitationCountView-citationCountNumber-385\\"
+                               >
+                                 6
+                               </span>
+                             </a>
+                             <a
+                               aria-label=\\"Full citation in Scopus will open in a new window\\"
+                               class=\\"scopusCitationCount CitationCountView-citationCount-384 ExternalLink-externalLink-372\\"
+                               href=\\"http://ezproxy.library.uq.edu.au/login?url=http://www.scopus.com/record/display.url?eid=2-s2.0-85014391875&origin=inward\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Scopus will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon scopus large\\"
+                               />
+                               <span
+                                 class=\\"CitationCountView-citationCountNumber-385\\"
+                               >
+                                 7
+                               </span>
+                             </a>
+                             <a
+                               aria-label=\\"Full citation in Altmetric will open in a new window\\"
+                               class=\\"altmetricCitationCount CitationCountView-citationCount-384 ExternalLink-externalLink-372\\"
+                               href=\\"http://www.altmetric.com/details.php?citation_id=9271343\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Altmetric will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon altmetric large\\"
+                               />
+                               <span
+                                 class=\\"CitationCountView-citationCountNumber-385\\"
+                               >
+                                 2
+                               </span>
+                             </a>
+                             <a
+                               aria-label=\\"Full citation in Google scholar will open in a new window\\"
+                               class=\\"googleCitationCount CitationCountView-citationCount-384 ExternalLink-externalLink-372\\"
+                               href=\\"https://scholar.google.com/scholar?q=intitle:Long-range%20regulators%20of%20the%20lncRNA%20HOTAIR%20enhance%20its%20prognostic%20potential%20in%20breast%20cancer\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Full citation in Google scholar will open in a new window\\"
+                             >
+                               <span
+                                 class=\\"fez-icon google large\\"
+                               />
+                             </a>
+                             <span
+                               class=\\"noOaIcon\\"
+                             />
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4\\"
+                           >
+                             <a
+                               class=\\"CitationCounts-statsLink-383 ExternalLink-externalLink-372\\"
+                               href=\\"https://app.library.uq.edu.au/#/authors/view/UQ:396321\\"
+                               rel=\\"noopener noreferrer\\"
+                               tabindex=\\"0\\"
+                               target=\\"_blank\\"
+                               theme=\\"[object Object]\\"
+                               title=\\"Long-range regulators of the lncRNA HOTAIR enhance its prognostic potential in breast cancer\\"
+                             >
+                               <svg
+                                 aria-hidden=\\"true\\"
+                                 class=\\"MuiSvgIcon-root-374 ExternalLink-externalLinkIcon-373\\"
+                                 focusable=\\"false\\"
+                                 role=\\"presentation\\"
+                                 viewBox=\\"0 0 24 24\\"
                                >
+                                 <path
+                                   d=\\"M0 0h24v24H0z\\"
+                                   fill=\\"none\\"
+                                 />
+                                 <path
+                                   d=\\"M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z\\"
+                                 />
+                               </svg>
+                               View full statistics
+                             </a>
+                           </div>
                            <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+                 <hr
+                   class=\\"MuiDivider-root-386 PublicationCitation-divider-365\\"
+                 />
+                 <div
                    class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
                  >
+                   <span
+                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 MuiTypography-gutterBottom-127\\"
+                   >
+                     <span
+                       class=\\"PublicationCitation-contentIndicatorTitle-370\\"
+                     >
+                       Content Indicators:
+                     </span>
+                     Scholarship of Teaching and Learning, Protocol
+                   </span>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <span />
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-358\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-361\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-362\\"
+                   >
+                     Author linking
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-364\\"
+               >
+                 <label
+                   for=\\"authorLinking\\"
+                 >
+                   We were unable to automatically detect who you are from the list of authors on this work. Please select your name from the list below: 
+                 </label>
+                 <div
+                   class=\\"requiredField\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 WithTheme-WithWidth-AuthorLinking---infiniteContainer-404\\"
+                     >
+                       <div
+                         class=\\"\\"
+                         style=\\"height: 200px; overflow-x: hidden; overflow-y: scroll;\\"
+                       >
+                         <div>
                            <div
-             style=\\"padding: 8px;\\"
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                           <div
+                             class=\\"MuiGrid-container-3\\"
                            >
                              <div
-               class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-8-25 MuiGrid-align-items-xs-center-11 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
                              >
                                <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                                 class=\\"MuiGrid-container-3\\"
                                >
                                  <div
-                   class=\\"MuiCircularProgress-root-317 MuiCircularProgress-colorPrimary-320 MuiCircularProgress-indeterminate-319\\"
-                   role=\\"progressbar\\"
-                   style=\\"width: 18px; height: 18px;\\"
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-498 MuiButtonBase-disabled-499 MuiButton-root-472 MuiButton-text-474 MuiButton-flat-477 MuiButton-disabled-492 MuiButton-fullWidth-497 AuthorItem-buttonBase-509\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-473\\"
                                      >
                                        <svg
-                     class=\\"MuiCircularProgress-svg-322\\"
-                     viewBox=\\"22 22 44 44\\"
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-374 AuthorItem-authorLinkIcon-508\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                     <circle
-                       class=\\"MuiCircularProgress-circle-323 MuiCircularProgress-circleIndeterminate-325\\"
-                       cx=\\"44\\"
-                       cy=\\"44\\"
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
-                       r=\\"21\\"
-                       stroke-width=\\"2\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
                                          />
                                        </svg>
+                                       Milevskiy, Michael J. G.
+                                     </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-510\\"
+                                   >
+                                     First  listed author
+                                   </span>
                                  </div>
                                </div>
+                             </div>
                              <div
-                 class=\\"MuiGrid-item-4 MuiGrid-grid-xs-auto-30\\"
-                 style=\\"text-align: center;\\"
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-498 MuiButton-root-472 MuiButton-text-474 MuiButton-flat-477 MuiButton-fullWidth-497 AuthorItem-buttonBase-509\\"
+                                     tabindex=\\"0\\"
+                                     type=\\"button\\"
                                    >
                                      <span
-                   class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorPrimary-130\\"
-                   style=\\"font-size: 1.33rem;\\"
+                                       class=\\"MuiButton-label-473\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-374 MuiSvgIcon-colorSecondary-376 AuthorItem-authorLinkIcon-508\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
                                        >
-                   Loading record to claim
+                                         <path
+                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                         />
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                       </svg>
+                                       Al-Ejeh, Fares
+                                     </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-501\\"
+                                     />
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-510\\"
+                                   >
+                                     Second  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                             <div
+                               class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51 MuiGrid-grid-md-4-63\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-container-3\\"
+                               >
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <button
+                                     class=\\"MuiButtonBase-root-498 MuiButtonBase-disabled-499 MuiButton-root-472 MuiButton-text-474 MuiButton-flat-477 MuiButton-disabled-492 MuiButton-fullWidth-497 AuthorItem-buttonBase-509\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
+                                     type=\\"button\\"
+                                   >
+                                     <span
+                                       class=\\"MuiButton-label-473\\"
+                                     >
+                                       <svg
+                                         aria-hidden=\\"true\\"
+                                         class=\\"MuiSvgIcon-root-374 AuthorItem-authorLinkIcon-508\\"
+                                         focusable=\\"false\\"
+                                         role=\\"presentation\\"
+                                         viewBox=\\"0 0 24 24\\"
+                                       >
+                                         <path
+                                           d=\\"M0 0h24v24H0z\\"
+                                           fill=\\"none\\"
+                                         />
+                                         <path
+                                           d=\\"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\\"
+                                         />
+                                       </svg>
+                                       Saunus, Jodi M.
                                      </span>
+                                   </button>
+                                 </div>
+                                 <div
+                                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                                 >
+                                   <span
+                                     class=\\"MuiTypography-root-100 MuiTypography-caption-110 AuthorItem-authorOrder-510\\"
+                                   >
+                                     Third  listed author
+                                   </span>
+                                 </div>
+                               </div>
+                             </div>
+                           </div>
+                           <div />
+                           <div
+                             style=\\"width: 100%; height: 0px;\\"
+                           />
+                         </div>
+                       </div>
+                     </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-358\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-361\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-362\\"
+                   >
+                     Optional: Content Indicators
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-364\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <p
+                       class=\\"MuiTypography-root-100 MuiTypography-body2-108\\"
+                     >
+                       You can select multiple (up to 3) content indicators to add more information about your work, but you cannot remove indicators already selected. To amend existing information, suggest a correction below.
+                     </p>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-410 MuiFormControl-fullWidth-413\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-421 MuiFormLabel-filled-425 MuiInputLabel-root-414 MuiInputLabel-formControl-415 MuiInputLabel-animated-418 MuiInputLabel-shrink-417\\"
+                         data-shrink=\\"true\\"
+                       >
+                         Please select relevant indicator(s).
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-448 MuiInput-root-435 MuiInput-underline-439 MuiInputBase-formControl-449 MuiInput-formControl-436\\"
+                       >
+                         <div
+                           class=\\"MuiSelect-root-428\\"
+                         >
+                           <div
+                             aria-haspopup=\\"true\\"
+                             aria-pressed=\\"false\\"
+                             class=\\"MuiSelect-select-429 MuiSelect-selectMenu-432 MuiInputBase-input-458 MuiInput-input-443\\"
+                             id=\\"content-indicators\\"
+                             role=\\"button\\"
+                             tabindex=\\"0\\"
+                           >
+                             Scholarship of Teaching and Learning, Protocol
+                           </div>
+                           <input
+                             type=\\"hidden\\"
+                             value=\\"454079,454080\\"
+                           />
+                           <svg
+                             aria-hidden=\\"true\\"
+                             class=\\"MuiSvgIcon-root-374 MuiSelect-icon-434\\"
+                             focusable=\\"false\\"
+                             role=\\"presentation\\"
+                             viewBox=\\"0 0 24 24\\"
+                           >
+                             <path
+                               d=\\"M7 10l5 5 5-5z\\"
+                             />
+                           </svg>
+                         </div>
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-358\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-361\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-362\\"
+                   >
+                     Optional: Suggest changes or add links to this work
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-364\\"
+               >
+                 <div
+                   class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-16-26\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-410 MuiFormControl-fullWidth-413\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-421 MuiInputLabel-root-414 MuiInputLabel-formControl-415 MuiInputLabel-animated-418\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Type edits/changes/comments here\\"
+                       >
+                         Type edits/changes/comments here
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-448 MuiInput-root-435 MuiInput-underline-439 MuiInputBase-fullWidth-457 MuiInput-fullWidth-442 MuiInputBase-formControl-449 MuiInput-formControl-436 MuiInputBase-multiline-456 MuiInput-multiline-441\\"
+                       >
+                         <textarea
+                           aria-invalid=\\"false\\"
+                           class=\\"MuiInputBase-input-458 MuiInput-input-443 MuiInputBase-inputMultiline-460 MuiInput-inputMultiline-445\\"
+                           id=\\"Type edits/changes/comments here\\"
+                           name=\\"comments\\"
+                           rows=\\"3\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       class=\\"MuiFormControl-root-410 MuiFormControl-fullWidth-413\\"
+                     >
+                       <label
+                         class=\\"MuiFormLabel-root-421 MuiInputLabel-root-414 MuiInputLabel-formControl-415 MuiInputLabel-animated-418\\"
+                         data-shrink=\\"false\\"
+                         for=\\"Link (URL)\\"
+                       >
+                         Link (URL)
+                       </label>
+                       <div
+                         class=\\"MuiInputBase-root-448 MuiInput-root-435 MuiInput-underline-439 MuiInputBase-fullWidth-457 MuiInput-fullWidth-442 MuiInputBase-formControl-449 MuiInput-formControl-436\\"
+                       >
+                         <input
+                           aria-invalid=\\"false\\"
+                           class=\\"MuiInputBase-input-458 MuiInput-input-443\\"
+                           id=\\"Link (URL)\\"
+                           name=\\"rek_link\\"
+                           type=\\"text\\"
+                           value=\\"\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
+             >
+               <div
+                 class=\\"MuiCardHeader-root-358\\"
+               >
+                 <div
+                   class=\\"MuiCardHeader-content-361\\"
+                 >
+                   <h3
+                     class=\\"MuiTypography-root-100 MuiTypography-h5-116 MuiTypography-colorInherit-129 MuiCardHeader-title-362\\"
+                   >
+                     Optional: Upload additional files
+                   </h3>
+                 </div>
+               </div>
+               <div
+                 class=\\"MuiCardContent-root-364\\"
+               >
+                 <p
+                   class=\\"MuiTypography-root-100 MuiTypography-body2-108 MuiTypography-gutterBottom-127\\"
+                 >
+                   You may add up to 10 files (max 8GB each)
+                 </p>
+                 <div
+                   class=\\"MuiGrid-container-3\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+                   >
+                     <div
+                       tabindex=\\"0\\"
+                     >
+                       <div
+                         aria-disabled=\\"false\\"
+                         class=\\"\\"
+                         style=\\"position: relative; padding: 0px;\\"
+                       >
+                         <div
+                           class=\\"MuiGrid-container-3 FileUploadDropzoneStaticContent-dropzone-468\\"
+                         >
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <p
+                               class=\\"MuiTypography-root-100 MuiTypography-body2-108 FileUploadDropzoneStaticContent-heading-469\\"
+                             >
+                               File upload restrictions
+                             </p>
+                             <div>
+                               Please ensure your files:
+                               <ul>
+                                 <li>
+                                   begin with a letter and are less than 45 characters long
+                                 </li>
+                                 <li>
+                                   contain only upper and lowercase alphanumeric characters, and underscores
+                                 </li>
+                                 <li>
+                                   have only a single period which precedes the file extension: e.g. “.pdf”, “.mov”, “.tiff”, “.wav” etc.
+                                 </li>
+                                 <li>
+                                   two periods are allowed for multipart zip files.  Allowed formats for part description are: e.g. “.001 ... .999”, “.r01 ... .r999” and “.part1 ... .part999”
+                                 </li>
+                                 <li>
+                                   are uploaded individually and not inside a folder
+                                 </li>
+                               </ul>
+                             </div>
+                           </div>
+                           <div
+                             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-6-51\\"
+                           >
+                             <div
+                               class=\\"MuiGrid-container-3 MuiGrid-direction-xs-column-6 MuiGrid-align-items-xs-center-11 MuiGrid-justify-xs-center-20 FileUploadDropzoneStaticContent-instructions-470\\"
+                             >
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <svg
+                                   aria-hidden=\\"true\\"
+                                   class=\\"MuiSvgIcon-root-374 FileUploadDropzoneStaticContent-cloudIcon-471\\"
+                                   focusable=\\"false\\"
+                                   role=\\"presentation\\"
+                                   viewBox=\\"0 0 24 24\\"
+                                 >
+                                   <path
+                                     d=\\"M0 0h24v24H0z\\"
+                                     fill=\\"none\\"
+                                   />
+                                   <path
+                                     d=\\"M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z\\"
+                                   />
+                                 </svg>
+                               </div>
+                               <div
+                                 class=\\"MuiGrid-item-4\\"
+                               >
+                                 <p>
+                                   Click here to select files, or drag files into this area to upload
+                                 </p>
+                               </div>
+                             </div>
+                           </div>
+                         </div>
+                         <input
+                           autocomplete=\\"off\\"
+                           id=\\"Uploader\\"
+                           multiple=\\"\\"
+                           style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
+                           type=\\"file\\"
+                         />
+                       </div>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20 Alert-warning-519 Alert-common-511\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43 MuiGrid-grid-sm-true-45\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-3 MuiGrid-align-items-xs-flex-start-12 MuiGrid-align-content-xs-center-15 MuiGrid-justify-xs-center-20\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-4 Alert-icon-512\\"
+                       id=\\"icon\\"
+                     >
+                       <svg
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-374 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
+                       >
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
+                           fill=\\"none\\"
+                         />
+                         <path
+                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
+                         />
+                       </svg>
+                     </div>
+                     <div
+                       class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31 Alert-text-513\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Validation - 
+                       </b>
+                       <span>
+                         Form cannot be submitted until all fields are valid. Please review all input fields.
+                         <ul>
+                           <li>
+                             You are required to select a author from the list, then confirm that it is you
+                           </li>
+                         </ul>
+                       </span>
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
+           class=\\"MuiGrid-container-3 MuiGrid-spacing-xs-24-27\\"
+         >
+           <div
+             class=\\"MuiGrid-item-4 MuiGrid-grid-xs-true-31\\"
+           />
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-498 MuiButton-root-472 MuiButton-contained-483 MuiButton-raised-486 MuiButton-fullWidth-497\\"
+               tabindex=\\"0\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-473\\"
+               >
+                 Cancel this claim
+               </span>
+               <span
+                 class=\\"MuiTouchRipple-root-501\\"
+               />
+             </button>
+           </div>
+           <div
+             class=\\"MuiGrid-item-4\\"
+           >
+             <button
+               class=\\"MuiButtonBase-root-498 MuiButtonBase-disabled-499 MuiButton-root-472 MuiButton-contained-483 MuiButton-containedPrimary-484 MuiButton-raised-486 MuiButton-raisedPrimary-487 MuiButton-disabled-492 MuiButton-fullWidth-497\\"
+               disabled=\\"\\"
+               id=\\"claimSubmit\\"
+               tabindex=\\"-1\\"
+               type=\\"button\\"
+             >
+               <span
+                 class=\\"MuiButton-label-473\\"
+               >
+                 Claim this work
+               </span>
+             </button>
+           </div>
+         </div>
+       </form>
      </div>
    </div>
  </DocumentFragment>"
`;

exports[`ClaimRecord form should allow content indicators to be selected 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -558,11 +558,12 @@
                          <div
                            class=\\"MuiSelect-root-428\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
-                             aria-pressed=\\"false\\"
+                             aria-owns=\\"menu-\\"
+                             aria-pressed=\\"true\\"
                              class=\\"MuiSelect-select-429 MuiSelect-selectMenu-432 MuiInputBase-input-458 MuiInput-input-443\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >"
`;

exports[`ClaimRecord form should allow content indicators to be selected 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -297,11 +297,11 @@
                    </span>
                  </div>
                </div>
              </div>
            </div>
-           <span />
+           <div />
            <div
              class=\\"MuiGrid-item-4 MuiGrid-grid-xs-12-43\\"
            >
              <div
                class=\\"MuiPaper-root-331 MuiPaper-elevation1-334 MuiPaper-rounded-332 MuiCard-root-330 Cards-card-326 StandardCard\\"
@@ -565,15 +565,15 @@
                              class=\\"MuiSelect-select-429 MuiSelect-selectMenu-432 MuiInputBase-input-458 MuiInput-input-443\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol
+                             Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"454079,454080\\"
+                             value=\\"454079,454080,454081\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-374 MuiSelect-icon-434\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should allow content indicators to be selected 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -565,15 +565,15 @@
                              class=\\"MuiSelect-select-429 MuiSelect-selectMenu-432 MuiInputBase-input-458 MuiInput-input-443\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
                              tabindex=\\"0\\"
                            >
-                             Scholarship of Teaching and Learning, Protocol, Case Study
+                             Scholarship of Teaching and Learning, Protocol
                            </div>
                            <input
                              type=\\"hidden\\"
-                             value=\\"454079,454080,454081\\"
+                             value=\\"454079,454080\\"
                            />
                            <svg
                              aria-hidden=\\"true\\"
                              class=\\"MuiSvgIcon-root-374 MuiSelect-icon-434\\"
                              focusable=\\"false\\""
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -412,17 +412,17 @@
                                      <span
                                        class=\\"MuiButton-label-1016\\"
                                      >
                                        <svg
                                          aria-hidden=\\"true\\"
-                                         class=\\"MuiSvgIcon-root-917 MuiSvgIcon-colorSecondary-919 AuthorItem-authorLinkIcon-1051\\"
+                                         class=\\"MuiSvgIcon-root-917 MuiSvgIcon-colorPrimary-918 AuthorItem-authorLinkIcon-1051\\"
                                          focusable=\\"false\\"
                                          role=\\"presentation\\"
                                          viewBox=\\"0 0 24 24\\"
                                        >
                                          <path
-                                           d=\\"M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
+                                           d=\\"M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z\\"
                                          />
                                          <path
                                            d=\\"M0 0h24v24H0z\\"
                                            fill=\\"none\\"
                                          />
@@ -500,10 +500,52 @@
                            />
                          </div>
                        </div>
                      </div>
                    </div>
+                   <label
+                     class=\\"MuiFormControlLabel-root-1087 WithTheme-WithWidth-AuthorLinking---root-948\\"
+                   >
+                     <span
+                       class=\\"MuiButtonBase-root-1041 MuiIconButton-root-1101 MuiSwitchBase-root-1097 MuiCheckbox-root-1091 WithTheme-WithWidth-AuthorLinking---checkboxRoot-950 MuiCheckbox-colorSecondary-1096 MuiSwitchBase-checked-1098 MuiCheckbox-checked-1092 WithTheme-WithWidth-AuthorLinking---checkboxChecked-951\\"
+                     >
+                       <span
+                         class=\\"MuiIconButton-label-1106\\"
+                       >
+                         <svg
+                           aria-hidden=\\"true\\"
+                           class=\\"MuiSvgIcon-root-917\\"
+                           focusable=\\"false\\"
+                           role=\\"presentation\\"
+                           viewBox=\\"0 0 24 24\\"
+                         >
+                           <path
+                             d=\\"M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z\\"
+                           />
+                         </svg>
+                         <input
+                           class=\\"MuiSwitchBase-input-1100\\"
+                           data-indeterminate=\\"false\\"
+                           id=\\"authorAcceptDeclaration\\"
+                           type=\\"checkbox\\"
+                           value=\\"\\"
+                         />
+                       </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1044\\"
+                       />
+                     </span>
+                     <span
+                       class=\\"MuiTypography-root-643 MuiTypography-body2-651 MuiFormControlLabel-label-1090\\"
+                     >
+                       <p
+                         class=\\"MuiTypography-root-643 WithTheme-WithWidth-AuthorLinking---label-949 MuiTypography-body2-651 MuiTypography-colorSecondary-674\\"
+                       >
+                         I confirm and understand that I am claiming this work under the above name, and confirm this is me
+                       </p>
+                     </span>
+                   </label>
                  </div>
                </div>
              </div>
            </div>
            <div
@@ -794,69 +836,12 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
-           <div
-             class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
-           >
-             <div
-               class=\\"Alert\\"
-               style=\\"padding: 12px;\\"
-             >
-               <div
-                 class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563 Alert-warning-1062 Alert-common-1054\\"
-               >
-                 <div
-                   class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586 MuiGrid-grid-sm-true-588\\"
-                 >
-                   <div
-                     class=\\"MuiGrid-container-546 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563\\"
-                   >
-                     <div
-                       class=\\"MuiGrid-item-547 Alert-icon-1055\\"
-                       id=\\"icon\\"
-                     >
-                       <svg
-                         aria-hidden=\\"true\\"
-                         class=\\"MuiSvgIcon-root-917 icon\\"
-                         focusable=\\"false\\"
-                         role=\\"presentation\\"
-                         viewBox=\\"0 0 24 24\\"
-                       >
-                         <path
-                           d=\\"M0 0h24v24H0z\\"
-                           fill=\\"none\\"
-                         />
-                         <path
-                           d=\\"M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z\\"
-                         />
-                       </svg>
          </div>
          <div
-                       class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574 Alert-text-1056\\"
-                       id=\\"text\\"
-                     >
-                       <b>
-                         Validation - 
-                       </b>
-                       <span>
-                         Form cannot be submitted until all fields are valid. Please review all input fields.
-                         <ul>
-                           <li>
-                             You are required to select a author from the list, then confirm that it is you
-                           </li>
-                         </ul>
-                       </span>
-                     </div>
-                   </div>
-                 </div>
-               </div>
-             </div>
-           </div>
-         </div>
-         <div
            class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570\\"
          >
            <div
              class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574\\"
            />
@@ -880,21 +865,23 @@
            </div>
            <div
              class=\\"MuiGrid-item-547\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-disabled-1035 MuiButton-fullWidth-1040\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-fullWidth-1040\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1016\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1044\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -403,12 +403,13 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-text-1017 MuiButton-flat-1020 MuiButton-fullWidth-1040 AuthorItem-buttonBase-1052\\"
-                                     tabindex=\\"0\\"
+                                     class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-text-1017 MuiButton-flat-1020 MuiButton-disabled-1035 MuiButton-fullWidth-1040 AuthorItem-buttonBase-1052\\"
+                                     disabled=\\"\\"
+                                     tabindex=\\"-1\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1016\\"
                                      >
@@ -427,13 +428,10 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
-                                     <span
-                                       class=\\"MuiTouchRipple-root-1044\\"
-                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
                                  >
@@ -501,14 +499,15 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1087 WithTheme-WithWidth-AuthorLinking---root-948\\"
+                     class=\\"MuiFormControlLabel-root-1087 WithTheme-WithWidth-AuthorLinking---root-948 MuiFormControlLabel-disabled-1089\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1041 MuiIconButton-root-1101 MuiSwitchBase-root-1097 MuiCheckbox-root-1091 WithTheme-WithWidth-AuthorLinking---checkboxRoot-950 MuiCheckbox-colorSecondary-1096 MuiSwitchBase-checked-1098 MuiCheckbox-checked-1092 WithTheme-WithWidth-AuthorLinking---checkboxChecked-951\\"
+                       class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiIconButton-root-1101 MuiIconButton-disabled-1105 MuiSwitchBase-root-1097 MuiCheckbox-root-1091 WithTheme-WithWidth-AuthorLinking---checkboxRoot-950 MuiCheckbox-colorSecondary-1096 MuiSwitchBase-checked-1098 MuiCheckbox-checked-1092 WithTheme-WithWidth-AuthorLinking---checkboxChecked-951 MuiSwitchBase-disabled-1099 MuiCheckbox-disabled-1093\\"
+                       tabindex=\\"-1\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1106\\"
                        >
                          <svg
@@ -523,21 +522,19 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1100\\"
                            data-indeterminate=\\"false\\"
+                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
-                       <span
-                         class=\\"MuiTouchRipple-root-1044\\"
-                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-643 MuiTypography-body2-651 MuiFormControlLabel-label-1090\\"
+                       class=\\"MuiTypography-root-643 MuiTypography-body2-651 MuiFormControlLabel-label-1090 MuiFormControlLabel-disabled-1089\\"
                      >
                        <p
                          class=\\"MuiTypography-root-643 WithTheme-WithWidth-AuthorLinking---label-949 MuiTypography-body2-651 MuiTypography-colorSecondary-674\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -593,23 +590,22 @@
                          data-shrink=\\"true\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
                        >
                          <div
                            class=\\"MuiSelect-root-971\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-972 MuiSelect-selectMenu-975 MuiInputBase-input-1001 MuiInput-input-986\\"
+                             class=\\"MuiSelect-select-972 MuiSelect-selectMenu-975 MuiSelect-disabled-976 MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
-                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
@@ -664,22 +660,23 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-953 MuiFormControl-fullWidth-956\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-964 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
+                         class=\\"MuiFormLabel-root-964 MuiFormLabel-disabled-966 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
                          data-shrink=\\"false\\"
                          for=\\"Type edits/changes/comments here\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979 MuiInputBase-multiline-999 MuiInput-multiline-984\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979 MuiInputBase-multiline-999 MuiInput-multiline-984\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-inputMultiline-1003 MuiInput-inputMultiline-988\\"
+                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-inputMultiline-1003 MuiInput-inputMultiline-988\\"
+                           disabled=\\"\\"
                            id=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
                        </div>
@@ -690,22 +687,23 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-953 MuiFormControl-fullWidth-956\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-964 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
+                         class=\\"MuiFormLabel-root-964 MuiFormLabel-disabled-966 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
                          data-shrink=\\"false\\"
                          for=\\"Link (URL)\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-1001 MuiInput-input-986\\"
+                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981\\"
+                           disabled=\\"\\"
                            id=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
                          />
@@ -751,11 +749,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"false\\"
+                         aria-disabled=\\"true\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-546 FileUploadDropzoneStaticContent-dropzone-1011\\"
@@ -824,10 +822,11 @@
                              </div>
                            </div>
                          </div>
                          <input
                            autocomplete=\\"off\\"
+                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -836,52 +835,102 @@
                    </div>
                  </div>
                </div>
              </div>
            </div>
+           <div
+             class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
+           >
+             <div
+               class=\\"Alert\\"
+               style=\\"padding: 12px;\\"
+             >
+               <div
+                 class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563 Alert-info_outline-1119 Alert-common-1107\\"
+               >
+                 <div
+                   class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586 MuiGrid-grid-sm-true-588\\"
+                 >
+                   <div
+                     class=\\"MuiGrid-container-546 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563\\"
+                   >
+                     <div
+                       class=\\"MuiGrid-item-547 Alert-icon-1108\\"
+                       id=\\"icon\\"
+                     >
+                       <div
+                         class=\\"MuiCircularProgress-root-1121 MuiCircularProgress-colorPrimary-1124 MuiCircularProgress-indeterminate-1123 spinner\\"
+                         role=\\"progressbar\\"
+                         style=\\"width: 38px; height: 38px;\\"
+                       >
+                         <svg
+                           class=\\"MuiCircularProgress-svg-1126\\"
+                           viewBox=\\"22 22 44 44\\"
+                         >
+                           <circle
+                             class=\\"MuiCircularProgress-circle-1127 MuiCircularProgress-circleIndeterminate-1129\\"
+                             cx=\\"44\\"
+                             cy=\\"44\\"
+                             fill=\\"none\\"
+                             r=\\"20.5\\"
+                             stroke-width=\\"3\\"
+                           />
+                         </svg>
+                       </div>
                      </div>
                      <div
+                       class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574 Alert-text-1109\\"
+                       id=\\"text\\"
+                     >
+                       <b>
+                         Saving - 
+                       </b>
+                       Claim publication is being processed.
+                     </div>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+         </div>
+         <div
            class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570\\"
          >
            <div
              class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574\\"
            />
            <div
              class=\\"MuiGrid-item-547\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-raised-1029 MuiButton-fullWidth-1040\\"
-               tabindex=\\"0\\"
+               class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-raised-1029 MuiButton-disabled-1035 MuiButton-fullWidth-1040\\"
+               disabled=\\"\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1016\\"
                >
                  Cancel this claim
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1044\\"
-               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-547\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-fullWidth-1040\\"
+               class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-disabled-1035 MuiButton-fullWidth-1040\\"
+               disabled=\\"\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"0\\"
+               tabindex=\\"-1\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1016\\"
                >
                  Claim this work
                </span>
-               <span
-                 class=\\"MuiTouchRipple-root-1044\\"
-               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;

exports[`ClaimRecord form should validate the form where applicable and submit correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -297,11 +297,11 @@
                    </span>
                  </div>
                </div>
              </div>
            </div>
-           <div />
+           <span />
            <div
              class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
            >
              <div
                class=\\"MuiPaper-root-874 MuiPaper-elevation1-877 MuiPaper-rounded-875 MuiCard-root-873 Cards-card-869 StandardCard\\"
@@ -403,13 +403,12 @@
                                >
                                  <div
                                    class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
                                  >
                                    <button
-                                     class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-text-1017 MuiButton-flat-1020 MuiButton-disabled-1035 MuiButton-fullWidth-1040 AuthorItem-buttonBase-1052\\"
-                                     disabled=\\"\\"
-                                     tabindex=\\"-1\\"
+                                     class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-text-1017 MuiButton-flat-1020 MuiButton-fullWidth-1040 AuthorItem-buttonBase-1052\\"
+                                     tabindex=\\"0\\"
                                      type=\\"button\\"
                                    >
                                      <span
                                        class=\\"MuiButton-label-1016\\"
                                      >
@@ -428,10 +427,13 @@
                                            fill=\\"none\\"
                                          />
                                        </svg>
                                        Al-Ejeh, Fares
                                      </span>
+                                     <span
+                                       class=\\"MuiTouchRipple-root-1044\\"
+                                     />
                                    </button>
                                  </div>
                                  <div
                                    class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586\\"
                                  >
@@ -499,15 +501,14 @@
                          </div>
                        </div>
                      </div>
                    </div>
                    <label
-                     class=\\"MuiFormControlLabel-root-1087 WithTheme-WithWidth-AuthorLinking---root-948 MuiFormControlLabel-disabled-1089\\"
+                     class=\\"MuiFormControlLabel-root-1087 WithTheme-WithWidth-AuthorLinking---root-948\\"
                    >
                      <span
-                       class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiIconButton-root-1101 MuiIconButton-disabled-1105 MuiSwitchBase-root-1097 MuiCheckbox-root-1091 WithTheme-WithWidth-AuthorLinking---checkboxRoot-950 MuiCheckbox-colorSecondary-1096 MuiSwitchBase-checked-1098 MuiCheckbox-checked-1092 WithTheme-WithWidth-AuthorLinking---checkboxChecked-951 MuiSwitchBase-disabled-1099 MuiCheckbox-disabled-1093\\"
-                       tabindex=\\"-1\\"
+                       class=\\"MuiButtonBase-root-1041 MuiIconButton-root-1101 MuiSwitchBase-root-1097 MuiCheckbox-root-1091 WithTheme-WithWidth-AuthorLinking---checkboxRoot-950 MuiCheckbox-colorSecondary-1096 MuiSwitchBase-checked-1098 MuiCheckbox-checked-1092 WithTheme-WithWidth-AuthorLinking---checkboxChecked-951\\"
                      >
                        <span
                          class=\\"MuiIconButton-label-1106\\"
                        >
                          <svg
@@ -522,19 +523,21 @@
                            />
                          </svg>
                          <input
                            class=\\"MuiSwitchBase-input-1100\\"
                            data-indeterminate=\\"false\\"
-                           disabled=\\"\\"
                            id=\\"authorAcceptDeclaration\\"
                            type=\\"checkbox\\"
                            value=\\"\\"
                          />
                        </span>
+                       <span
+                         class=\\"MuiTouchRipple-root-1044\\"
+                       />
                      </span>
                      <span
-                       class=\\"MuiTypography-root-643 MuiTypography-body2-651 MuiFormControlLabel-label-1090 MuiFormControlLabel-disabled-1089\\"
+                       class=\\"MuiTypography-root-643 MuiTypography-body2-651 MuiFormControlLabel-label-1090\\"
                      >
                        <p
                          class=\\"MuiTypography-root-643 WithTheme-WithWidth-AuthorLinking---label-949 MuiTypography-body2-651 MuiTypography-colorSecondary-674\\"
                        >
                          I confirm and understand that I am claiming this work under the above name, and confirm this is me
@@ -590,22 +593,23 @@
                          data-shrink=\\"true\\"
                        >
                          Please select relevant indicator(s).
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
                        >
                          <div
                            class=\\"MuiSelect-root-971\\"
                          >
                            <div
                              aria-haspopup=\\"true\\"
                              aria-owns=\\"menu-\\"
                              aria-pressed=\\"true\\"
-                             class=\\"MuiSelect-select-972 MuiSelect-selectMenu-975 MuiSelect-disabled-976 MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981\\"
+                             class=\\"MuiSelect-select-972 MuiSelect-selectMenu-975 MuiInputBase-input-1001 MuiInput-input-986\\"
                              id=\\"content-indicators\\"
                              role=\\"button\\"
+                             tabindex=\\"0\\"
                            >
                              Scholarship of Teaching and Learning, Protocol, Case Study
                            </div>
                            <input
                              type=\\"hidden\\"
@@ -660,23 +664,22 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-953 MuiFormControl-fullWidth-956\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-964 MuiFormLabel-disabled-966 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
+                         class=\\"MuiFormLabel-root-964 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
                          data-shrink=\\"false\\"
                          for=\\"Type edits/changes/comments here\\"
                        >
                          Type edits/changes/comments here
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979 MuiInputBase-multiline-999 MuiInput-multiline-984\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979 MuiInputBase-multiline-999 MuiInput-multiline-984\\"
                        >
                          <textarea
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-inputMultiline-1003 MuiInput-inputMultiline-988\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-inputMultiline-1003 MuiInput-inputMultiline-988\\"
                            id=\\"Type edits/changes/comments here\\"
                            name=\\"comments\\"
                            rows=\\"3\\"
                          />
                        </div>
@@ -687,23 +690,22 @@
                    >
                      <div
                        class=\\"MuiFormControl-root-953 MuiFormControl-fullWidth-956\\"
                      >
                        <label
-                         class=\\"MuiFormLabel-root-964 MuiFormLabel-disabled-966 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
+                         class=\\"MuiFormLabel-root-964 MuiInputLabel-root-957 MuiInputLabel-formControl-958 MuiInputLabel-animated-961\\"
                          data-shrink=\\"false\\"
                          for=\\"Link (URL)\\"
                        >
                          Link (URL)
                        </label>
                        <div
-                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-disabled-994 MuiInput-disabled-981 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
+                         class=\\"MuiInputBase-root-991 MuiInput-root-978 MuiInput-underline-982 MuiInputBase-fullWidth-1000 MuiInput-fullWidth-985 MuiInputBase-formControl-992 MuiInput-formControl-979\\"
                        >
                          <input
                            aria-invalid=\\"false\\"
-                           class=\\"MuiInputBase-input-1001 MuiInput-input-986 MuiInputBase-disabled-994 MuiInput-disabled-981\\"
-                           disabled=\\"\\"
+                           class=\\"MuiInputBase-input-1001 MuiInput-input-986\\"
                            id=\\"Link (URL)\\"
                            name=\\"rek_link\\"
                            type=\\"text\\"
                            value=\\"\\"
                          />
@@ -749,11 +751,11 @@
                    >
                      <div
                        tabindex=\\"0\\"
                      >
                        <div
-                         aria-disabled=\\"true\\"
+                         aria-disabled=\\"false\\"
                          class=\\"\\"
                          style=\\"position: relative; padding: 0px;\\"
                        >
                          <div
                            class=\\"MuiGrid-container-546 FileUploadDropzoneStaticContent-dropzone-1011\\"
@@ -822,11 +824,10 @@
                              </div>
                            </div>
                          </div>
                          <input
                            autocomplete=\\"off\\"
-                           disabled=\\"\\"
                            id=\\"Uploader\\"
                            multiple=\\"\\"
                            style=\\"position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; opacity: 0.00001; pointer-events: none;\\"
                            type=\\"file\\"
                          />
@@ -843,50 +844,46 @@
              <div
                class=\\"Alert\\"
                style=\\"padding: 12px;\\"
              >
                <div
-                 class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563 Alert-info_outline-1119 Alert-common-1107\\"
+                 class=\\"MuiGrid-container-546 MuiGrid-spacing-xs-24-570 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563 Alert-done-1143 Alert-common-1130\\"
                >
                  <div
                    class=\\"MuiGrid-item-547 MuiGrid-grid-xs-12-586 MuiGrid-grid-sm-true-588\\"
                  >
                    <div
                      class=\\"MuiGrid-container-546 MuiGrid-align-items-xs-flex-start-555 MuiGrid-align-content-xs-center-558 MuiGrid-justify-xs-center-563\\"
                    >
                      <div
-                       class=\\"MuiGrid-item-547 Alert-icon-1108\\"
+                       class=\\"MuiGrid-item-547 Alert-icon-1131\\"
                        id=\\"icon\\"
                      >
-                       <div
-                         class=\\"MuiCircularProgress-root-1121 MuiCircularProgress-colorPrimary-1124 MuiCircularProgress-indeterminate-1123 spinner\\"
-                         role=\\"progressbar\\"
-                         style=\\"width: 38px; height: 38px;\\"
-                       >
                        <svg
-                           class=\\"MuiCircularProgress-svg-1126\\"
-                           viewBox=\\"22 22 44 44\\"
+                         aria-hidden=\\"true\\"
+                         class=\\"MuiSvgIcon-root-917 icon\\"
+                         focusable=\\"false\\"
+                         role=\\"presentation\\"
+                         viewBox=\\"0 0 24 24\\"
                        >
-                           <circle
-                             class=\\"MuiCircularProgress-circle-1127 MuiCircularProgress-circleIndeterminate-1129\\"
-                             cx=\\"44\\"
-                             cy=\\"44\\"
+                         <path
+                           d=\\"M0 0h24v24H0z\\"
                            fill=\\"none\\"
-                             r=\\"20.5\\"
-                             stroke-width=\\"3\\"
+                         />
+                         <path
+                           d=\\"M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z\\"
                          />
                        </svg>
-                       </div>
                      </div>
                      <div
-                       class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574 Alert-text-1109\\"
+                       class=\\"MuiGrid-item-547 MuiGrid-grid-xs-true-574 Alert-text-1132\\"
                        id=\\"text\\"
                      >
                        <b>
-                         Saving - 
+                         Success - 
                        </b>
-                       Claim publication is being processed.
+                       Publication claim has been submitted successfully.
                      </div>
                    </div>
                  </div>
                </div>
              </div>
@@ -900,37 +897,41 @@
            />
            <div
              class=\\"MuiGrid-item-547\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-raised-1029 MuiButton-disabled-1035 MuiButton-fullWidth-1040\\"
-               disabled=\\"\\"
-               tabindex=\\"-1\\"
+               class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-raised-1029 MuiButton-fullWidth-1040\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1016\\"
                >
                  Cancel this claim
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1044\\"
+               />
              </button>
            </div>
            <div
              class=\\"MuiGrid-item-547\\"
            >
              <button
-               class=\\"MuiButtonBase-root-1041 MuiButtonBase-disabled-1042 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-disabled-1035 MuiButton-fullWidth-1040\\"
-               disabled=\\"\\"
+               class=\\"MuiButtonBase-root-1041 MuiButton-root-1015 MuiButton-contained-1026 MuiButton-containedPrimary-1027 MuiButton-raised-1029 MuiButton-raisedPrimary-1030 MuiButton-fullWidth-1040\\"
                id=\\"claimSubmit\\"
-               tabindex=\\"-1\\"
+               tabindex=\\"0\\"
                type=\\"button\\"
              >
                <span
                  class=\\"MuiButton-label-1016\\"
                >
                  Claim this work
                </span>
+               <span
+                 class=\\"MuiTouchRipple-root-1044\\"
+               />
              </button>
            </div>
          </div>
        </form>
      </div>"
`;
